--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-Hello World 2021 !
+<!DOCTYPE html>
+<html>
+<body>
+
+<h2>Hello Worls! Welcome to 2021 </h2>
+<img src="img_chania.jpg" alt="Flowers in Chania" width="460" height="345">
+
+</body>
+</html>
