--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h2>Hello Worls! Welcome to 2021 </h2>
+<h2>Hello World! Welcome to 2021 </h2>
 <img src="img_chania.jpg" alt="Flowers in Chania" width="460" height="345">
 
 </body>
