--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <body>
 
-<h2>Hello World! Welcome to 2021 </h2>
-<img src="img_chania.jpg" alt="Flowers in Chania" width="460" height="345">
+<h2>Hello World! Welcome to MIT CLOUD DEVOPS TRAINING... </h2>
+<img src="download.png" alt="Flowers in Chania" width="460" height="345">
 
 </body>
 </html>
