--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body>
 
 <h2>Hello World! Welcome to MIT CLOUD DEVOPS TRAINING... </h2>
-<img src="download.png" alt="Flowers in Chania" width="460" height="345">
+<img src="download.png" alt="MIT Training" width="460" height="345">
 
 </body>
 </html>
